<resources>
    <string name="app_name" translatable="false">FG manager</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome!"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Enter_name_of_product">Type a name</string>
    <string name="Title_of_Barcode">Barcode:</string>
    <string name="hint_Enter_Of_Barcode">Type a barcode</string>
    <string name="title_Of_Product">Name:</string>
    <string name="cancel">Cancel</string>
    <string name="title_Of_Date">Date:</string>
    <string name="hint_tv_SelectedDate" translatable="false">MM/DD/YYYY</string>
    <string name="Title_of_Days">Dates:</string>
    <string name="sign_out">Exit</string>
    <string name="menu">Menu</string>
    <string name="sign_in">Log in</string>
    <string name="user_name">Name user</string>
    <string name="start_free_version">Free account</string>
    <string name="textButtonOfAddProduct" translatable="false">+</string>
    <string name="Notification">Notification</string>
    <string name="Registration">Registration</string>
    <string name="Button_Ok_Registration">Registration</string>
    <string name="Button_Cancel_Registration">Cancel</string>
    <string name="tv_Reg_Name_Of_Database">Type database\'s name</string>
    <string name="Hint_type_name_of_database" translatable="false">Type name of Database</string>
    <string name="tv_Choose_Plan">Choose account\'s plan</string>
    <string name="Menu_Back">Back</string>
    <string name="Menu_Settings">Settings</string>
    <string name="List_Of_Users">List of users</string>
    <string name="Users_Old_Password">Old password</string>
    <string name="Users_New_Password">Enter new password</string>
    <string name="Users_Confirm_Password">Confirm password</string>
    <string name="Button_Ok" translatable="false">Ok</string>
    <string name="Users_Type_New_Password">Type password</string>
    <string name="Users_Confirm_New_Password">Confirm password</string>
    <string name="Uncorrect_LinesOfNewPassword">Fields filled out incorrectly</string>
    <string name="FillBothLines">Fill in both fields Login and Password</string>
    <string name="Delete_Item">Delete</string>
    <string name="Question_Delete_Item">Delete item ?</string>
    <string name="Answer_Delete_Item_Yes">Yes</string>
    <string name="Answer_Delete_Item_No">No</string>
    <string name="Log_Out_Title">Exit</string>
    <string name="Question_To_LogOut">Are you sure, that you want to Log out?</string>
    <string name="expiration_date">expiration date has expired</string>
    <string name="left_date">Left days:</string>
    <string name="users_5">5 Users</string>
    <string name="users_15">15 Users</string>
    <string name="users_25">25 Users</string>
    <string name="users_50">50 Users</string>
    <string name="users_100">100 Users</string>
    <string name="ET_DatabaseName">Fill the gap of Database\'s name</string>
    <string name="UncorrectNameOrPassword">Invalid Username or Password</string>
</resources>