<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/b_Reg_Ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/Button_Ok_Registration"
            app:layout_constraintBottom_toBottomOf="@+id/b_Reg_Cancel"
            app:layout_constraintEnd_toStartOf="@+id/b_Reg_Cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/b_Reg_Cancel"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/b_Reg_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="200dp"
            android:text="@string/Button_Cancel_Registration"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_Name_Database"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tv_Reg_Name_Of_Database"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/et_Name_Of_Database"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_Name_Of_Database"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/et_Name_Of_Database"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginBottom="30dp"
            android:ems="10"
            android:hint="@string/Hint_type_name_of_database"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/tv_Choose_the_Plan"
            app:layout_constraintEnd_toEndOf="@+id/b_Reg_Cancel"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/b_Reg_Ok"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_Choose_the_Plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Choose_Plan"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/id_Radio_Group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_Name_Of_Database"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.918" />

        <RadioGroup
            android:id="@+id/id_Radio_Group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/b_Reg_Ok"
            app:layout_constraintEnd_toEndOf="@+id/et_Name_Of_Database"
            app:layout_constraintStart_toStartOf="@+id/tv_Choose_the_Plan">

            <RadioButton
                android:id="@+id/radioButton_5u"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users_5" />

            <RadioButton
                android:id="@+id/radioButton_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users_15" />

            <RadioButton
                android:id="@+id/radioButton_25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users_25" />

            <RadioButton
                android:id="@+id/radioButton_50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users_50" />

            <RadioButton
                android:id="@+id/radioButton_100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users_100" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>