<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.UpdatePasswordFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_OldPas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Users_Old_Password"
            android:textColor="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <EditText
            android:id="@+id/et_OldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:hint="..."
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_OldPas"
            app:layout_constraintStart_toStartOf="@+id/tv_OldPas"
                app:layout_constraintTop_toBottomOf="@+id/tv_OldPas" />

        <TextView
            android:id="@+id/tv_NewPas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/purple_500"
            android:text="@string/Users_New_Password"
            app:layout_constraintEnd_toEndOf="@+id/et_OldPassword"
            app:layout_constraintStart_toStartOf="@+id/et_OldPassword"
            app:layout_constraintTop_toBottomOf="@+id/et_OldPassword" />

        <EditText
            android:id="@+id/et_NewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/Users_Type_New_Password"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_NewPas"
            app:layout_constraintStart_toStartOf="@+id/tv_NewPas"
            app:layout_constraintTop_toBottomOf="@+id/tv_NewPas" />

        <TextView
            android:id="@+id/tv_СonfirmPas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/purple_500"
            android:text="@string/Users_Confirm_Password"
            app:layout_constraintEnd_toEndOf="@+id/et_NewPassword"
            app:layout_constraintStart_toStartOf="@+id/et_NewPassword"
            app:layout_constraintTop_toBottomOf="@+id/et_NewPassword" />

        <EditText
            android:id="@+id/et_ConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/Users_Confirm_New_Password"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_СonfirmPas"
            app:layout_constraintStart_toStartOf="@+id/tv_СonfirmPas"
            app:layout_constraintTop_toBottomOf="@+id/tv_СonfirmPas"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/b_Users_Pass_Ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/Button_Ok"
            app:layout_constraintEnd_toStartOf="@+id/b_Users_Pass_Cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_ConfirmPassword" />

        <Button
            android:id="@+id/b_Users_Pass_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/Button_Cancel_Registration"
            app:layout_constraintBottom_toBottomOf="@+id/b_Users_Pass_Ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_Users_Pass_Ok"
            app:layout_constraintTop_toTopOf="@+id/b_Users_Pass_Ok" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>