<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    app:cardCornerRadius="3dp">
<!--        android:layout_marginStart="1dp"-->
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_name_of_product"
            android:textSize="14sp"
            android:lines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_tv_SelectedDate"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Item_barcode"/>

        <TextView
            android:id="@+id/tv_Item_barcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_Enter_Of_Barcode"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"/>

        <TextView
            android:id="@+id/tv_amount_days"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="000"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/im_GoTo_CreateDateFragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_Title_numberDays"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_date" />

        <ImageView
            android:id="@+id/im_GoTo_CreateDateFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount_days"
            app:srcCompat="@android:drawable/ic_input_add"
            android:background="@color/gray"/>

        <ImageView
            android:id="@+id/im_Delete_Item"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_item_name"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tv_item_name"
            app:layout_constraintTop_toTopOf="@+id/tv_item_name"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <TextView
            android:id="@+id/tv_Title_numberDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="000"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_date" />

</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>